Updating to JDK 21